manifests/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kite-agent
spec:
  selector:
    matchLabels:
      app: kite-agent
  template:
    metadata:
      labels:
        app: kite-agent
    spec:
      serviceAccountName: kite-service-account
      containers:
        - name: kite-daemon
          image: kite:dev
          args:
            - kite
            # - --label-selector=app=nginx
            # - --field-selector=metadata.namespace=default
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: kite-socket
              mountPath: /var/run/kite
          securityContext:
            privileged: true  # Needed to attach bpf programs
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 200m
              memory: 500Mi
      volumes:
        - name: kite-socket
          hostPath:
            type: DirectoryOrCreate
            path: /var/run/kite
